--- a/priv/swagger_ui.html
+++ b/priv/swagger_ui.html
@@ -10,7 +10,7 @@
   <script src="https://unpkg.com/swagger-ui-dist/swagger-ui-bundle.js"></script>
   <script>
     window.ui = SwaggerUIBundle({
-      url: 'openapi.json', // or a full URL
+      url: 'api-docs', // or a full URL
       dom_id: '#swagger',
       deepLinking: true,
       presets: [SwaggerUIBundle.presets.apis],
